--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <body>
-<h1><a href=https://www.nytimes.com/games/wordle/index.html><img src="C:\Users\Danijela\Desktop\Files for web\tumblr_2039ac529dbb2a76b23373c3e3b9b898_04e4c8c6_540.png" width="100"  height="100"/></a>Daniela Lovrić</h1>  
+<h1><a href=https://www.nytimes.com/games/wordle/index.html><img src="Files for web\tumblr_2039ac529dbb2a76b23373c3e3b9b898_04e4c8c6_540.png" width="100"  height="100"/></a>Daniela Lovrić</h1>  
 <link rel="stylesheet" href="C:\Users\Danijela\Desktop\Files for web\stil.css" />
 <h2>Ova stranica je posvećena mojim interesima! :)</h2>
 <p>Moje ime je <b>Daniela Lovrić</b> i imam 19 godina. Obožavam <b>gledati i analizirati filmove, slušati glazbu, filozofiju, povijest</b> te <b>umjetnost!</b> 
@@ -17,14 +17,14 @@ antičku filozofiju, jer ona je temelj svega što će doći nakon, no najviše i
 otkad sam znala za sebe, bilo to na papiru ili na školskim klupama. Svaki put kada bih se naživcirala u školi, bila tužna, sretna, crtala bih. Uz pravu dozu motivacije naravno.
 Umjetnost me do sada pratila kroz život i smatram da će me pratiti do kraja. Uvijek sam znala da ću se baviti nečim kreativnim kad odrastem, 
 i upravo sam zato upisala <b>Grafički fakultet!</b></p>
-<p style="color:orange;">Ovo su moje top 3 knjige:  <img src="C:\Users\Danijela\Desktop\Files for web\156bd211757a74cbecf04932bae8d1a5.jpg" width="50"  height="50"/>
+<p style="color:orange;">Ovo su moje top 3 knjige:  <img src="Files for web\156bd211757a74cbecf04932bae8d1a5.jpg" width="50"  height="50"/>
 <ol>
 <li>Zločin i kazna - Fjodor Dostojevski</li>
 <li>Sapiens: A brief history of humankind - Yuval Noah Harari</li>
 <li>Ponos i predrasude - Jane Austen</li>
 </ol>
 </p>
-<p style="color:orange;">Neke pjesme koje volim:    <img src="C:\Users\Danijela\Desktop\Files for web\20086-256x256x8.png" width="50"  height="50" alt="Click me" id="randomLinkImage" />
+<p style="color:orange;">Neke pjesme koje volim:    <img src="Files for web\20086-256x256x8.png" width="50"  height="50" alt="Click me" id="randomLinkImage" />
 
   <script>
     const links = [
@@ -52,16 +52,16 @@ i upravo sam zato upisala <b>Grafički fakultet!</b></p>
 <li>Soba 23 -<span style="color: lightgreen;"> Denis</span> <span style="color: lightsteelblue;">&</span> <span style="color: pink;">Denis</span></li>
 <li>Apsolutno tvoj - <span style="color: orange;">Mirzino jato</span></li>
 </ul><br>
-<h3>Cool stvari za kraj!  <img src="C:\Users\Danijela\Desktop\Files for web\pixelated-sunglasses-emoji-uzzbwjwsv6re9ka8-uzzbwjwsv6re9ka8.png" width="45"  height="45"/>  </h3>
+<h3>Cool stvari za kraj!  <img src="Files for web\pixelated-sunglasses-emoji-uzzbwjwsv6re9ka8-uzzbwjwsv6re9ka8.png" width="45"  height="45"/>  </h3>
 <nav>
 <ul>
 <li><a href=https://randomcolour.com/>Ne znaš koja si boja?? Saznaj sada!</a></li>
-<li><a href=file:///C:/Users/Danijela/Downloads/dodatni%20sadr%C5%BEaj.html>Za one koji žele znati više...</a></li>
-<li><a href=file:///C:/Users/Danijela/Documents/Donnie%20Darko%20esej.pdf>Moj nedovršeni esej o najboljem filmu ikad :P </a></li>
+<li><a href=Downloads/dodatni%20sadr%C5%BEaj.html>Za one koji žele znati više...</a></li>
+<li><a href=Documents/Donnie%20Darko%20esej.pdf>Moj nedovršeni esej o najboljem filmu ikad :P </a></li>
 </ul>
 </nav>
 </p>
-<img src="C:\Users\Danijela\Desktop\Files for web\df239402f7e2c7e92b660e3930b8fe74.png" height="200" width="300" style="position:fixed; top:0; right:0;">
+<img src="Files for web\df239402f7e2c7e92b660e3930b8fe74.png" height="200" width="300" style="position:fixed; top:0; right:0;">
 </body>
 </head>
 </html>
