--- a/Dodatni_sadrzaj.html
+++ b/Dodatni_sadrzaj.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>Dodatni sadržaj</title>
-<link rel="stylesheet" href="C:\Users\Danijela\Desktop\Files for web\stil.css" />
+<link rel="stylesheet" href="Desktop\Files for web\stil.css" />
 </head>
 <body>
-<a href=file:///C:/Users/Danijela/Downloads/index.html>vrati me doma!</a>
+<a href=Downloads/index.html>vrati me doma!</a>
 <h1>Dodatni sadržaj!</h1>
 <h2>Video koji sam napravila za 9. vjezbu:</h2>
 <video width="640" height="360" controls>
@@ -13,20 +13,20 @@
 </video>
 <br>  ponosim se njime :)
 <h3>29 sekundi lijepe francuske pjesme ✮⋆˙</h3>
-<audio src="C:\Users\Danijela\Desktop\Files for web\Roi - Videoclub.mp3" controls></audio>
+<audio src=Files for web\Roi - Videoclub.mp3" controls></audio>
 <br>Zvuči poznato? Pogledajte video iznad još jednom ;)
 <h4>Cijela priča serije igara <i>Five Nights at Freddy's</i></h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RwvCKetYXwI?si=IsqTG9zBgPRXwXiZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h5>Slike :P</h5>
 <p>
-<img src="C:\Users\Danijela\Desktop\Files for web\1000106135.JPG"" width="200" 
+<img src="Files for web\1000106135.JPG"" width="200" 
      height="400"/>
-	 <img src="C:\Users\Danijela\Desktop\Files for web\1000105460.JPG" width="200" 
+	 <img src="Desktop\Files for web\1000105460.JPG" width="200" 
      height="400"/>
-	 <img src="C:\Users\Danijela\Desktop\Files for web\1000100477.JPG" width="200" 
+	 <img src="Desktop\Files for web\1000100477.JPG" width="200" 
      height="400"/>
 	 <br>kolekcija maca
 	 </p>
-	<img src="C:\Users\Danijela\Desktop\Files for web\Pbjt.webp" height="200" width="200" style="position: absolute; top:0; right:0;">
+	<img src="Files for web\Pbjt.webp" height="200" width="200" style="position: absolute; top:0; right:0;">
 </body>
 </html>
